removing unused docker files from csproj

--- a/TaskRunnerService/TaskRunnerService.csproj
+++ b/TaskRunnerService/TaskRunnerService.csproj
@@ -13,4 +13,9 @@
     <ItemGroup>
       <ProjectReference Include="..\RedisTaskScheduler\RedisTaskScheduler.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Dockerfile" />
+      <None Remove=".dockerignore" />
+    </ItemGroup>
 </Project>
