--- a/RedisTaskScheduler/RedisTaskScheduler.csproj
+++ b/RedisTaskScheduler/RedisTaskScheduler.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Dockerfile" />
+      <None Remove=".dockerignore" />
+    </ItemGroup>
+
 </Project>
